--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,7 +9,7 @@ block content
           span.icon-bar
           span.icon-bar
           span.icon-bar
-        a.navbar-brand(href="#") TDG
+        a.navbar-brand(href="#") ITDG
       .collapse.navbar-collapse#navbar
         ul.nav.navbar-nav
           if user.instructor
