--- a/views/bootstrap.jade
+++ b/views/bootstrap.jade
@@ -8,7 +8,7 @@ html
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1")
 
-    title TDG
+    title ITDG
 
     link(rel="stylesheet" href="bootstrap/css/bootstrap.min.css")
     link(rel="stylesheet" href="bootstrap/css/bootstrap-theme.min.css")
