--- a/views/login.jade
+++ b/views/login.jade
@@ -6,7 +6,7 @@ block content
       .modal-content
         form(method="post")
           .modal-header
-            h3.modal-title TDG
+            h3.modal-title ITDG
           .modal-body
             .row
               .form-group.col-sm-5
