Use own title for sessions and not the scenario's title

--- a/views/index.jade
+++ b/views/index.jade
@@ -37,7 +37,7 @@ block scenarios
             session = scenario_session.session;
         if session
           tr.session
-            td= scenario.state.scenarioTitle
+            td= session.state.scenarioTitle
               br
               span.small instructor, n students
             td= session.state.classroom.company
