--- a/views/index.jade
+++ b/views/index.jade
@@ -14,7 +14,7 @@ block scenarios
       return scenario.scenario.document;
     } ).reduce( function( scenario_sessions, scenario ) {
       var sessions = ( scenario.sessions || [] ).filter( function( session ) {
-        return session.instance;
+        return true; // TODO: select only incomplete sessions
       } );
       return scenario_sessions.concat( sessions.map( function( session ) {
         return { scenario: scenario.scenario, session: session };
@@ -114,7 +114,7 @@ block sessions
       return name;
     } ).reduce( function( scenario_sessions, scenario ) {
       var sessions = ( scenario.sessions || [] ).filter( function( session ) {
-        return session.document;
+        return session.document;  // TODO: select only complete sessions
       } );
       return scenario_sessions.concat( sessions.map( function( session ) {
         return { scenario: scenario.scenario, session: session };
