--- a/views/index.jade
+++ b/views/index.jade
@@ -6,20 +6,8 @@ block scenarios
   //- and joinable sessions (with instances).
 
   -
-    var application = "/ITDG/index.vwf",
-      scenarios = manifest[ application ] || [];
-    var scenario_sessions = _.sortBy( scenarios, function( scenario, name ) {
-      return name;
-    } ).filter( function( scenario ) {
-      return scenario.scenario.document;
-    } ).reduce( function( scenario_sessions, scenario ) {
-      var sessions = ( scenario.sessions || [] ).filter( function( session ) {
-        return true; // TODO: select only incomplete sessions
-      } );
-      return scenario_sessions.concat( sessions.map( function( session ) {
-        return { scenario: scenario.scenario, session: session };
-      } ) ).concat( { scenario: scenario.scenario, session: undefined } );
-    }, [] );
+    var scenario_sessions =
+      scenarioScenarioSessions( manifest[ "/ITDG/index.vwf" ] || [] );
 
   table.table#scenarios
     thead
@@ -110,20 +98,8 @@ block sessions
   //- Join each scenario with its sessions. Select only completed sessions (with documents).
 
   -
-    var application = "/ITDG/index.vwf",
-      scenarios = manifest[ application ] || [];
-    var scenario_sessions = _.sortBy( scenarios, function( scenario, name ) {
-      return name;
-    } ).reduce( function( scenario_sessions, scenario ) {
-      var sessions = ( scenario.sessions || [] ).filter( function( session ) {
-        return session.document;  // TODO: select only complete sessions
-      } );
-      return scenario_sessions.concat( sessions.map( function( session ) {
-        return { scenario: scenario.scenario, session: session };
-      } ) );
-    }, [] ).sort( function( a, b ) {
-      return b.session.document.timestamp - a.session.document.timestamp;
-    } );
+    var scenario_sessions =
+      sessionScenarioSessions( manifest[ "/ITDG/index.vwf" ] || [] );
 
   table.table#sessions
     thead
