Distinguish between current and completed sessions

--- a/views/index.jade
+++ b/views/index.jade
@@ -26,6 +26,8 @@ block scenarios
         if session
           tr.session
             td= session.state.scenarioTitle
+              br
+              span.small= instructorStudentsLabel( session )
             td= session.state.classroom.company
             td= session.state.classroom.platoon
             td= session.state.classroom.unit
