--- a/public/layout.css
+++ b/public/layout.css
@@ -6,3 +6,23 @@ body {
 .navbar {
   margin-bottom: 20px;
 }
+
+table {
+    width: 100%;
+    max-width: 100%;
+    table-layout: fixed;
+}
+
+thead, th { 
+	display: table-header-group;
+}
+tbody { 
+	display: table-row-group;
+	height: 100%;
+	overflow-y: auto; 
+}
+
+tr { display: table-row; }
+td { display: table-cell; }
+
+
