--- a/views/index.jade
+++ b/views/index.jade
@@ -26,8 +26,9 @@ block scenarios
             td.col-sm-5.title: input.form-control.input-sm(name="title" type="text" placeholder="New Scenario Title")
             td.col-sm-3.name(colspan=3): input.form-control.input-sm.hidden(name="name" type="text" placeholder="Scenario Name")
             td.col-sm-2 &nbsp;
-            th.col-sm-1 &nbsp;
-            td.col-sm-1: button.btn.btn-sm.create(type="submit" disabled) Create
+            td.col-sm-1: button.btn.btn-sm.btn-default.create(type="submit" disabled) Create
+            td.col-sm-1: label.btn.btn-sm.btn-default.import Import
+              input(type="file" accept=".zip" style="display: none;")
       each scenario_session in scenario_sessions
         -
           var scenario = scenario_session.scenario,
@@ -104,6 +105,33 @@ block scenarios
             done( function() { document.location.reload() } ).
             fail( function() {} );
           return false;
+        } );
+        $( ".import" ).change( function() {
+
+          var file = $( this ).find( "input" ).prop( "files" )[ 0 ];
+
+          // If the user canceled the file selector, do nothing
+          if ( !file ) {
+            return;
+          }
+
+          var formData = new FormData();
+          formData.append( "file", file );
+
+          $.ajax( {
+            url: "/import-scenarios",
+            type: "POST",
+            processData: false,
+            contentType: false,
+            data: formData,
+            success: function( data, textStatus, jqXHR ) {
+              location.reload();
+            },
+            error: function( jqXHR, textStatus, errorThrown ) {
+              var responseText = jqXHR.responseText || "Are you connected to the server?";
+              alert( "Uh oh ... we were unable to upload that file for import.\n" + responseText );
+            }
+          } );
         } );
       } );
 
