--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,7 +14,7 @@ block content
         ul.nav.navbar-nav
           if user.instructor
             li.active: a(href="#scenarios" data-toggle="tab") Scenarios
-            li: a(href="#sessions" data-toggle="tab") Sessions
+            li: a(href="#sessions" data-toggle="tab") Review
         form.navbar-form.navbar-right(method="post" action="/logout")
           button.btn.btn-link(type="submit") Logout
         -
